2007-04-27  Alan Modra  <amodra@bigpond.net.au>

	* bucumm.h: Split off host dependencies to..
	* sysdep.h: ..here.
	Many files: Include sysdep.h.  Remove duplicate headers and reorder.
	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2007-04-24  Nick Clifton  <nickc@redhat.com>

	* srconv.c (walk_tree_type_1): Initialise dpt.dunno.

2007-04-24  Nathan Froyd  <froydnj@codesourcery.com>
	    Phil Edwards  <phil@codesourcery.com>

	* objcopy.c (filter_symbols): Explicitly stripping a symbol
	used in relocations is an error.
	Retype 'keep' to bfd_boolean.

2007-04-24  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.

2007-04-20  Nathan Froyd  <froydnj@codesourcery.com>
	    Phil Edwards  <phil@codesourcery.com>
	    Thomas de Lellis <tdel@windriver.com>

	* objcopy.c (reverse_bytes):  New variable.
	(command_line_switch, copy_main):  Add OPTION_REVERSE_ENDIAN.
	(copy_options, copy_usage):  Add "reverse-bytes" entry.
	(copy_section):  Reverse bytes within output sections.
	* doc/binutils.texi:  Document new objcopy option.

2007-04-20  Nick Clifton  <nickc@redhat.com>

	* rclex.l: Allow underscores at the start of identifiers.

2007-04-19  Alan Modra  <amodra@bigpond.net.au>

	* budemang.c: Delete.
	* budemang.h: Delete.
	* addr2line.c (translate_addresses): Call bfd_demangle rather than
	demangle.
	* nm.c (print_symname): Likewise.
	* objdump.c (objdump_print_symname, dump_symbols): Likewise.
	(dump_bfd): Likewise.
	* prdbg.c (struct pr_handle <demangler>): Add int param.
	(tg_variable, tg_start_function): Adjust demangler calls.
	* Makefile.am: Remove mention of budemang.[ch].  Run "make dep-am".
	* Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.

2007-04-14  Steve Ellcey  <sje@cup.hp.com>

	* Makefile.am: Add ACLOCAL_AMFLAGS.
	* configure.in: Change macro call order.
	* Makefile.in: Regenerate.
	* configure: Regenerate.

2007-04-13  Nathan Sidwell  <nathan@codesourcery.com>
