@@ -1,3 +1,8 @@
+2007-04-28  Alan Modra  <amodra@bigpond.net.au>
+
+	* prdbg.c (tg_variable): Adjust for changed demangler.
+	(tg_start_function): Likewise.
+
 2007-04-27  Alan Modra  <amodra@bigpond.net.au>
 
 	* bucumm.h: Split off host dependencies to..
